--- a/content/bg9/40323250.md
+++ b/content/bg9/40323250.md
@@ -1,10 +1,7 @@
-Title: 40323250 - 期中報告
+Title: 40323250 - 重編報告
 Category: bg9
 Tags: scrum1, task1, 40323250
 Author: 40323250
-
-
-<h3>40323250 - 期中報告(重編中)</h3> 
 
 <!-- PELICAN_END_SUMMARY -->
 <p><span style="font-size: 20pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #82FF82;">繪圖流程：</span></strong></span></p>
