--- a/content/bg9/40323250.md
+++ b/content/bg9/40323250.md
@@ -4,10 +4,28 @@ Tags: scrum1, task1, 40323250
 Author: 40323250
 
 <!-- PELICAN_END_SUMMARY -->
-<p><span style="font-size: 20pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #82FF82;">繪圖流程：</span></strong></span></p>
+<p><span style="font-size: 22pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #82FF82;">繪圖流程：</span></strong></span></p>
 </br>
 先打開班級倉儲，若為非協同者點及Fork按鈕
 <img src="./../files/bg9/40323250/fork_1.png">
+</br>
 之後會跳到複製的cdw2版本，如下圖 :
 <img src="./../files/bg9/40323250/fork_2.png">
+</br>
+之後打開cmd，輸入git clone https網址，載下自己的倉儲，然後打開資料夾，找到自己相對應的組別就可以開是繪圖。
+</br>
+</br>
+<p><span style="font-size: 22pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FF8C00;">繪圖步驟：</span></strong></span></p>
+1.先定義自己的檔案內容，url _prefix 為前綴、scrum1_task40323250為藍圖，make_response則是該組員零件需要被導到別的圖時需要的東西。(scrum1為老師設定的範例，當初不知道，所以都拿過來用了，發現的時候已經來不及了)
+<img src="./../files/bg9/40323250/blueprint.png">
+</br>
+2.若上方藍圖設定為scrum1_task40323250，那紫色框框內也要相同，scrum1_50_ABCD所影響的是網址，之後會舉例。
+紅色框框則決定這個圖是否被導入別人的圖。
+如果有，就能透過wsgi.py讓圖形顯示在 localhost:5000/bg9(前綴)/scrum1_50_ABCD
+</br>
+如果沒有，在網頁上則顯示成文字。
+<img src="./../files/bg9/40323250/print_1.png">
+<img src="./../files/bg9/40323250/word.png">
+<img src="./../files/bg9/40323250/paint_2.png">
+
 
