--- a/content/bg9/40323250.md
+++ b/content/bg9/40323250.md
@@ -29,14 +29,28 @@ Author: 40323250
 <img src="./../files/bg9/40323250/print_1.png">
 </br>
 </br>
-Example 1 :
+<p><span style="font-size: 16pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FFFF00;">Example 1 :</span></strong></span></p>
 <img src="./../files/bg9/40323250/word.png">
 </br>
 </br>
-Example 2 :
+<p><span style="font-size: 16pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FFFF00;">Example 2 :</span></strong></span></p>
 <img src="./../files/bg9/40323250/paint_2.png">
 </br>
 </br>
 <p><span style="font-size: 18pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FF00FF;">繪圖方式：</span></strong></span></p>
+1.下圖為主要圖形，決定顯示的形狀，透過solvespace輸出2d-section存成.svg檔之結果，
+<img src="./../files/bg9/40323250/shape.png">
+</br>
+</br>
+2. translate為平移圖形、rotate為旋轉。
+</br>
+cmbr.translate(0, 20)是直接對主要圖形進行平移，之後的基準也會以此為主
+basic1 = cmbr.dup()和cmbr.appendPath(basic1)為一組，複製主要圖形，並能對此進行移動放置，其基準會以主要圖形為出發點
+</br>
+<p><span style="font-size: 14pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #2F4F4F;">旋轉：</span></strong></span></p>
+因為旋轉是以(0, 0)為旋轉中心，所以如果主要圖形不是在(0, 0)，就會整個跑掉，處理方式是將複製的零件先平移回(0, 0)後，進行旋轉再移到所需要的位置進行放置。
+</br>
+<img src="./../files/bg9/40323250/position.png">
+</br>
 </br>
 
