--- a/content/bg9/40323250.md
+++ b/content/bg9/40323250.md
@@ -38,19 +38,59 @@ Author: 40323250
 </br>
 </br>
 <p><span style="font-size: 18pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FF00FF;">繪圖方式：</span></strong></span></p>
-1.下圖為主要圖形，決定顯示的形狀，透過solvespace輸出2d-section存成.svg檔之結果，
+1.下圖為主要圖形，決定顯示的形狀，透過solvespace輸出2d-section存成.svg檔之結果。
 <img src="./../files/bg9/40323250/shape.png">
 </br>
 </br>
 2. translate為平移圖形、rotate為旋轉。
 </br>
 cmbr.translate(0, 20)是直接對主要圖形進行平移，之後的基準也會以此為主
-basic1 = cmbr.dup()和cmbr.appendPath(basic1)為一組，複製主要圖形，並能對此進行移動放置，其基準會以主要圖形為出發點
-</br>
+basic1 = cmbr.dup()和cmbr.appendPath(basic1)為一組，複製主要圖形，並能對此進行移動放置，其基準會以主要圖形為出發點。
 <p><span style="font-size: 14pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #2F4F4F;">旋轉：</span></strong></span></p>
 因為旋轉是以(0, 0)為旋轉中心，所以如果主要圖形不是在(0, 0)，就會整個跑掉，處理方式是將複製的零件先平移回(0, 0)後，進行旋轉再移到所需要的位置進行放置。
 </br>
 <img src="./../files/bg9/40323250/position.png">
 </br>
 </br>
+<p><span style="font-size: 22pt; font-family: 'arial black', 'avant garde';">&nbsp;<strong><span style="color: #FF8C00;">輸出與導入：</span></strong></span></p>
+學會繪圖之後，再來就是將自己的檔案導入組別的畫布裡了。
+</br>
+</br>
+如果要把自己的圖導入組別的畫布，除了要把圖形變成純文字以及make_response之外，還要在尾端加上幾行語法，如下圖，框框中的網址要放上導入者的openshift網址(主要的圖檔在他openshift上)
+<img src="./../files/bg9/40323250/make_response.png">
+</br>
+</br>
+那導入者要如何導入組員圖形呢?
+</br>
+</br>
+因為使用了make_response功能，所以要將導入者的程式切成三份，利用拼拼圖的方式完成導入。
+</br>
+這是導入者的第一段程式(用於導入畫布等功能)
+<img src="./../files/bg9/40323250/part1.png">
+</br>
+</br>
+這是導入者的第二段程式(用於尾端，關閉功能)
+<img src="./../files/bg9/40323250/part2.png">
+</br>
+</br>
+這是被導入者的程式
+<img src="./../files/bg9/40323250/part3.png">
+</br>
+</br>
+這是導入者的組合程式，把上面三者結合，而組合圖網址就會是這個
+<img src="./../files/bg9/40323250/part4.png">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
