--- a/content/bg9/40323250.md
+++ b/content/bg9/40323250.md
@@ -13,7 +13,7 @@ Author: 40323250
 <img src="./../files/bg9/40323250/fork_2.png">
 </br>
 </br>   
-之後打開cmd，輸入git clone https網址，載下自己的倉儲，然後打開資料夾，找到自己相對應的組別就可以開是繪圖。
+之後打開cmd，輸入git clone https網址，載下自己的倉儲，然後打開資料夾，找到自己相對應的組別就可以開始繪圖。
 </br>
 </br>
 <hr>
