--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -21,4 +21,6 @@ Author: 40323218
 <img src="./../files/bg9/18_2.png">
 </br>
 </br>
+<h4>個人 Onshape 組合 : </h4>
+<a href="https://github.com/40323250/bp9_cdw2/blob/gh-pages/files/bg9/40323218/2016spring-40323218.stl">
 <h3>心得 :</h3>
