--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -22,5 +22,5 @@ Author: 40323218
 </br>
 </br>
 <h4>個人 Onshape 組合 : </h4>
-<a href="https://github.com/40323250/bg9_cdw2/blob/gh-pages/files/bg9/40323218/2016spring-40323218.stl">
+<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files\bg9\40323218\2016spring-40323218"></script>
 <h3>心得 :</h3>
