--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -18,9 +18,9 @@ Author: 40323218
 </br>
 </br>
 <h4>個人圖檔 : </h4>
-<img src="./../files/bg9/18_2.png">
+<img src="./../files/bg9/18_1.png">
 </br>
 </br>
 <h4>個人 Onshape 組合 : </h4>
-<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files\bg9\40323218\2016spring-40323218"></script>
+<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files\bg9\40323218\40323218"></script>
 <h3>心得 :</h3>
