--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -18,7 +18,7 @@ Author: 40323218
 </br>
 </br>
 <h4>個人圖檔 : </h4>
-<img src="./../files/bg9/18_1.png">
+<img src="./../files/bg9/40323218/18_2.png">
 </br>
 </br>
 <h3>心得 :</h3>
