--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -21,4 +21,6 @@ Author: 40323218
 <img src="./../files/bg9/40323218/18_2.png">
 </br>
 </br>
+<h4>個人Onshape圖檔 : </h4>
+<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files/bg9/40323218/40323218.stl"></script>
 <h3>心得 :</h3>
