--- a/content/bg9/40323230.md
+++ b/content/bg9/40323230.md
@@ -3,7 +3,6 @@ Category: bg9
 Tags: scrum5, task5, 40323230
 Author: 40323230
 
-
 40323230 - 期中報告
 
 <!-- PELICAN_END_SUMMARY -->
@@ -20,7 +19,11 @@ Author: 40323230
 <h4>個人圖檔 : </h4>
 <img src="./../files/bg9/30_2.png">
 </br>
+<h4>個人Onshape圖檔 : </h4>
+<img src="./../files/bg9/30_3.png">
+
 </br>
+<hr>
 <h3>心得 :</h3>
 <h4>這次作業依靠Github和Onshape的協同功能，完成在雲端下指令繪製2D和3D圖形的任務。</h4>
 </br>
@@ -28,7 +31,7 @@ Author: 40323230
 </br>
 <h4>而這次在多重確認機制下，修改檔案犯的錯也能先在自己的倉儲察覺到，預先提防覆蓋其他人的成品，雖然這個機制現階段仍有些不周，但是對於組員之間的配合以及防範嚴重的錯誤上還是有不錯的成效。</h4>
 </br>
-</br>
 <h4>做作業時，由於對指令不太熟悉，只能去研究各個參數的作用，或是觀察其他人修改時造成的效果。由於自己不太習慣用筆記，所以親身嘗試、模仿和自行找一些資料學習效果較顯著，只要不要在公共倉儲造成失誤，引來其他組員的麻煩就好。</h4>
-
+</br>
+<h4>這次的作業從各方面了解許多東西，給自己75分。</h4>
 
