--- a/content/bg9/40323230.md
+++ b/content/bg9/40323230.md
@@ -21,7 +21,7 @@ Author: 40323230
 </br>
 <h4>個人Onshape圖檔 : </h4>
 <img src="./../files/bg9/30_3.png">
-
+<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files/bg9/40323230.stl"></script>
 </br>
 <hr>
 <h3>心得 :</h3>
