--- a/content/bg9/40323231.md
+++ b/content/bg9/40323231.md
@@ -17,10 +17,11 @@ Author: 40323231
 <img src="./../files/bg9/bg9.png">
 </br>
 </br>
-<h4>個人圖檔 : </h4>
-<img src="./../files/bg9/31_1.png">
+<h4>個人圖檔1 : </h4>
+<img src="./../files/bg9/31_1.PNG">
 </br>
-<img src="./../files/bg9/31_2.png">
+<h4>個人圖檔2 : </h4>
+<img src="./../files/bg9/31_2.PNG">
 </br>
 <h4>個人Onshape圖檔 : </h4>
 <script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files/bg9/40323231.stl"></script>
