--- a/content/bg9/40323218.md
+++ b/content/bg9/40323218.md
@@ -21,8 +21,6 @@ Author: 40323218
 <img src="./../files/bg9/40323218/18_2.png">
 </br>
 </br>
-<h2>個人Onshape圖檔 : </h2>
-<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files/bg9/40323218/40323218.stl"></script>
 <h2>操作 :</h2>
 <h3>在master協同繪製圖形，各組內每個人分別繪製圖形中的一部份，上傳至個人的Openshift內，再經由組長統一導入至組裝圖。</h3>
 <h4>我的部分程式繪圖：</h4>
@@ -39,3 +37,12 @@ Author: 40323218
 <h3>在gh-pages編寫心得和流程，說明自己在小組中負責的部分，說明流程和程式的意義。</h3>
 <img src="./../files/bg9/40323218/18_10.png">
 <h3>在Onshape上組裝個人的ABCD，理解零件位置和裝配角度，再設計到master程式裡</h3>
+<h4>Onshape : </h4>
+<script src="https://embed.github.com/view/3d/40323250/bg9_cdw2/gh-pages/files/bg9/40323218/40323218.stl"></script>
+</br>
+<h2>心得 : </h2>
+<h3>這次協同讓我學到在小組中如何跟組員溝通、分配工作和分享心得，理解圖要如何繪製，程式有何意義，將自己會的跟組員分享學習，在教導的過程中更加鞏固自己所學的，排除錯誤的方式尋找更簡便的方法，雖然班上的倉儲一直被破壞，還好我們有準備備用的倉儲，使我們可以完成作業。</h3>
+</br>
+</br>
+<h3>自評分數 : 75分</h3>
+
